# augedit

./: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  INSTALL  Makefile.am  README  TODO  autogen.sh  configure.ac  coverage.sh
po/: CMakeLists.txt  LINGUAS  POTFILES  POTFILES.in  POTFILES.skip  augedit.pot  fr.po  he.po  index.lokalize
src/: CMakeLists.txt  Makefile.am  augedit-application.vala  augedit-loader.vala  augedit-span.vala  augedit.py  main.c  main.vala  net.augeas.augedit.gschema.xml
src/vapi/: config.vapi
tests/: CMakeLists.txt  Makefile.am  test-load.vala
